src/components/Navbar.css
.navbar {
  background: linear-gradient(90deg, rgb(216, 236, 203) 0%, rgb(247, 241, 204) 100%);
  height: 80px;
  /* display: flex; */
  justify-content: center;
  /* align-items: center; */
  font-size: 1.4rem;
  position: sticky;
  top: 0;
  z-index: 999;
}

.navbar-container {
  display: flex;
  /* justify-content: center; */
  align-items: center;
  height: 80px;
  max-width: 1500px;
}

.nav-menu {
  display: grid;
  grid-template-columns: repeat(4, auto);
  grid-gap: 20px;
  list-style: none;
  /* text-align: center; */
  width: 60vw;
  justify-content: end;
}

.nav-links {
  padding: 0.5rem 1rem;
}

.nav-links:hover {
  border-bottom: 4px solid #9fb350;
  transition: all 0.2s ease-out;
}

.fa-bars {
  color: #fff;
}

.menu-icon {
  display: none;
}

@media screen and (max-width: 960px) {
  .NavbarItems {
    position: relative;
  }

  .nav-menu {
    display: flex;
    flex-direction: column;
    width: 100%;
    height: 80vh;
    position: absolute;
    top: 80px;
    left: -100%;
    opacity: 3;
    transition: all 0.5s ease;
  }

  .nav-menu.active {
    background: #e3ebf8;
    left: 0;
    opacity: 1;
    transition: all 0.5s ease;
    z-index: 1;
  }

  .nav-links {
    text-align: center;
    padding: 2.5rem;
    width: 100%; 
    display: table;
  }

  .nav-links:hover {
    background-color: rgb(216, 236, 203);
    color: #242424;
    border-radius: 0;
  }

  .navbar-logo {
    position: absolute;
    top: 10px;
    left: 0;
    transform: translate(25%, 50%);
  }

  .menu-icon {
    display: block;
    position: absolute;
    top: 0;
    right: 0;
    transform: translate(-100%, 60%);
    font-size: 1.8rem;
    cursor: pointer;
  }

  .fa-times {
    color: rgb(96, 96, 96);
    font-size: 2rem;
  }
}

